[package]
name = "entry_point"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true   

[dependencies]
getopts = "0.2"
dinvoke_rs = "0.1.6"

[build-dependencies]
static_vcruntime = "2.0"